1.0b finally finished excluding taqman plugin